content/media/webaudio/AudioBuffer.h
@@ -108,7 +108,7 @@ protected:
 
   nsRefPtr<AudioContext> mContext;
   // Float32Arrays
-  nsAutoTArray<JSObject*,2> mJSChannels;
+  AutoFallibleTArray<JSObject*,2> mJSChannels;
 
   // mSharedChannels aggregates the data from mJSChannels. This is non-null
   // if and only if the mJSChannels are neutered.
